--- a/src/app/components/corrections/correction-common.scss
+++ b/src/app/components/corrections/correction-common.scss
@@ -1,7 +1,7 @@
 h4{
   font-size: 1rem;
   font-weight: bold;
-  color: var(--ion-color-inria-grey);
+  color: var(--ion-color-text-2);
   text-transform: uppercase;
 }
 
@@ -94,6 +94,6 @@ ion-label{
 
 .correction-right-answer{
   b{
-    color: var(--ion-color-inria-grey);
+    color: var(--ion-color-text-2);
   }
 }
