--- a/src/app/components/html/html.component.scss
+++ b/src/app/components/html/html.component.scss
@@ -79,7 +79,7 @@
   .accordion{
     position: relative;
     margin: 1em 0;
-    color: $inria-blue;
+    color: var(--ion-color-text);
 
     i{
       display: inline-block;
@@ -94,14 +94,14 @@
       display: flex;
       align-items: center;
       padding: 7px 5px 5px 5px;
-      border: 1px solid $inria-blue-border;
+      border: 1px solid var(--ion-color-border);
       border-radius: 3px;
       color:$inria-blue;
       cursor: pointer;
 
       span {
         flex-grow: 1;
-        color:$inria-blue!important;
+        color:var(--ion-color-text)!important;
       }
     }
 
@@ -122,7 +122,7 @@
     input:checked ~ .accordion-body{
       max-height: 150rem;
       padding: .5rem;
-      border: 1px solid $inria-blue-border;
+      border: 1px solid var(--ion-color-border);
       border-top: none;
       border-radius: 0 0 3px 3px;
     }
